--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,15 @@
   <title>Document</title>
 </head>
 <body>
+
+    <button id="load-songs"></button>
+
+    <article id="song-list"></article>
   
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>  
   <script src = "./bundle.js"></script>
 </body>
 </html>
