Coded the ajax call to get the songs database

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <button id="load-songs"></button>
+    <button id="load-songs">Load songs</button>
 
     <article id="song-list"></article>
   
